
2018-05-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y (usage_clause): better error message if USAGE is explicit
	  coded and an undefined word follows; this is especially helpful
	  for words that are only not reserved in the current dialect
	* field.c (compute_size): fix error position for SNYCH dialect messages

2018-05-14  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_check_overlapping): resolve one-level subscripts
	  for checking and warn if both subscripts reference the same
	  variable or numeric value

2018-05-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	Fixed Bug #521 - issues with source cache:
	* pplex.l (ppopen): deactivated changing \ to / in source names
	* codegen.c (output_source_cache, output_string_cache,
	  output_gnucobol_defines): escape \ and " for output to C strings

2018-05-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: added OrangeC version info
	* warning.def: fixed grammar in warning descriptions
	* cobc.c, flags.def: use "* " instead of "- " to better distinguish
	  descriptions from options

2018-04-26  Dave Pitts <dpitts@cozx.com>

	* cobc.c (reflow_replace_*_format_text): Changed to malloc token based on
	  newline length instead of hardcoded.

2018-04-24  Dave Pitts <dpitts@cozx.com>

	* cobc.c (reflow_replace_*_format_text): BUG #515 malloc'd token to
	  large size.
	* cobc.c (print_replace_text): BUG #515 malloc and realloc newline
	  based on length of tokens.

2018-04-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, config.def: FR #306 added Fujitsu extension
	  SYMBOLIC CONSTANT in SPECIAL-NAMES, effectively defining
	  GLOBAL constants from literals,
	  adjusted by compiler configuration symbolic-constant

2018-04-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* pplex.l: FR #305 for now - skip Fujitsu @OPTIONS

2018-04-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
